@@ -11,6 +11,7 @@ Done:
 Mon Jan 15 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
 	- Made directory listing look more like Apache
 	- strl(cpy/cat) strnlen implementations are now optinally inlineable
+	- Added option to limit listening to one specified interface only
 
 Fri Jan 12 2007 Nickolas Girgoriadis <grigi_@sourceforge.net>
 	- Went through all code trying to locate and fix possible buffer
